<resources>
    <string name="app_name">movies-app-java</string>
    <string name="released">Released:</string>
    <string name="appTitle">TMDB</string>
    <string name="see_more_button">See More</string>
    <string name="original_title">Original Title:</string>
    <string name="status">Status:</string>
    <string name="see_more">See More:</string>
    <string name="production_companies">Production Companies:</string>
    <string name="revenue">Revenue:</string>
    <string name="available_in">Available in:</string>
    <string name="try_again">Try Again</string>
    <string name="movie_duration_format">%d min.</string>
    <string name="movie_vote_average_format">%.2f/10</string>
    <string name="movie_budget_format">$%s</string>
</resources>